# pyAgentic

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: docs.yml  release.yml  testing.yml
Agent-Linking/: index.html
Inheritance/: index.html
Responses/: index.html
agent-linking/: index.html
api/: index.html
api/creating-an-app/: index.html
api/deploying/: index.html
api/jobs/: index.html
api/running/: index.html
diagrams/source/: index.html  instantiation.d2  runtime.d2
docs/: Inheritance.md  agent-linking.md  execution-modes.md  getting-started.md  index.md  inheritance.md  observability.md  phases.md  policies.md  prompts.md  responses.md  states.md  structured-output.md  tools.md
docs/api/: creating-an-app.md  deploying.md  index.md  jobs.md  running.md
docs/deploy/: building.md  creating-a-project.md  index.md  running.md
docs/diagrams/source/: README.md  declaration.d2
docs/policies/: built-in.md  custom.md  index.md
docs/reference/: architecture.md  modules.md
execution-modes/: index.html
getting-started/: index.html
inheritance/: index.html
objective_agents/: __init__.py  _base.py  _params.py  _tool.py  updates.py
objective_agents/_base/: _agent.py  _context.py  _exceptions.py  _metaclasses.py  _params.py  _resolver.py  _tool.py
observability/: index.html
phases/: index.html
policies/: index.html
policies/built-in/: index.html
policies/custom/: index.html
prompts/: index.html
pyagentic/: __init__.py  _version_scheme.py  diagram.py  logging.py  policies.py  updates.py
pyagentic/_base/: _agent.py  _agent_linking.py  _agent_state.py  _context.py  _depends.py  _event.py  _exceptions.py  _info.py  _mcp.py  _metaclasses.py  _params.py  _policy.py  _prompts.py  _ref.py  _resolver.py  _spec.py  _state.py  _tool.py  _tracing.py  _validation.py
pyagentic/_base/_agent/: _agent.py  _agent_linking.py  _agent_state.py
pyagentic/_utils/: _image.py  _typing.py  _warnings.py
pyagentic/api/: __init__.py  _app.py  _build.py  _config.py  _docker.py  _mcp_server.py  _models.py  _sessions.py
pyagentic/api/jobs/: __init__.py  _models.py  _orchestrator.py  _routes.py
pyagentic/api/jobs/backends/: __init__.py  _base.py  _in_process.py
pyagentic/api/jobs/store/: __init__.py  _base.py  _sqlite.py
pyagentic/cli/: __init__.py  __main__.py  _build.py  _init.py  _publish.py  _run.py  _templates.py
pyagentic/llm/: __init__.py  _anthropic.py  _backend.py  _gemini.py  _mock.py  _openai.py  _openaiv1.py  _provider.py  openai.py
pyagentic/mixins/: google.py
pyagentic/models/: llm.py  response.py  tracing.py
pyagentic/policies/: __init__.py  _events.py  _list.py  _policy.py  core.py  messages.py  sql.py
pyagentic/serve/: __init__.py  _agent_ref.py  _app.py  _client_session.py  _container.py  _discovery.py  _docker.py  _exceptions.py  _manifest.py  _mcp_server.py  _sessions.py  _sse.py
pyagentic/spaces/: __init__.py  _base.py  _messages.py  _queue.py
pyagentic/tracing/: __init__.py  _basic.py  _langfuse.py  _tracer.py  dict.py
reference/architecture/: index.html
reference/modules/: index.html
responses/: index.html
search/: search_index.json
states/: index.html
structured-output/: index.html
tests/: conftest.py
tests/_base/: test_agent.py  test_agent_forking.py  test_agent_inheritance.py  test_agent_linking.py  test_agent_message_policies.py  test_agent_provider.py  test_agent_run.py  test_agent_run_openai.py  test_agent_tracing.py  test_context.py  test_params.py  test_phases.py  test_policy_list.py  test_prompts.py  test_state.py  test_tool.py  test_validator.py
tests/api/: test_app.py  test_build_agent.py  test_config.py  test_construct_model.py  test_dependencies_integration.py  test_docker.py  test_mcp_server.py  test_metaclass_models.py  test_router.py  test_sessions.py
tests/api/jobs/: test_orchestrator.py  test_routes.py  test_store_sqlite.py
tests/cli/: test_init.py
tests/llm/: test_message_conversion.py
tests/models/: test_messages.py  test_responses.py
tests/policies/: test_message_policies.py
tests/serve/: test_agent_ref.py  test_app.py  test_client_session.py  test_discovery.py  test_docker.py  test_manifest.py  test_sessions.py
tests/tracing/: test_basic_tracer.py  test_models.py  test_tracer.py
tools/: index.html
