[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagentic-core"
version = "2.2.2"
description = "Build LLM Agents in a Pythonic way"
readme = "README.md"
requires-python = ">=3.13"
authors = [ { name="Ryan Mikulec", email="rmikulec.dev@gmail.com" } ]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "taskipy>=1.14.1",
    "openai>=1.99.3",
    "pydantic>=2.11.7",
    "typeguard>=4.4.4",
    "c3linearize>=0.1.0",
    "anthropic>=0.62.0",
    "google-generativeai>=0.8.0",
    "transitions>=0.9.3",
    "ty>=0.0.15",
    "jinja2>=3.1.6",
]

[project.scripts]
pyagentic = "pyagentic.cli:app"

[project.optional-dependencies]
deploy = [
    "typer>=0.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.10.2",
    "deepdiff>=8.5.0",
    "flake8>=7.3.0",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "python-semantic-release>=10.3.1",
]
demo = [
    "arxiv>=2.2.0",
    "pypdf2>=3.0.1",
    "python-chess>=1.999",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16.1",
]
eval = [
    "deepeval>=3.3.6",
]
ollama = [
    "ollama>=0.5.3",
]


[tool.semantic_release]
tag_format = "{version}"
version_source = "tag"
patch_without_tag = true
upload_to_pypi = true
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"

build_command = """
    python -m pip install --upgrade pip
    pip install uv
    uv sync --group dev

    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true
ignore_merge_commits = true

# main: stable releases (e.g. 2.3.1)
[tool.semantic_release.branches.main]
match = "^main$"
prerelease = false

# dev: beta prereleases, 1 major version ahead of main.
# Seed once with a breaking change commit (feat!: ...) or manual tag
# (git tag 3.0.0b0) to establish the major version offset.
# Each subsequent push increments the beta: 3.0.0b1, 3.0.0b2, ...
[tool.semantic_release.branches.dev]
match = "^dev$"
prerelease = true
prerelease_token = "b"

# feat/*: alpha prereleases, minor bump (e.g. 2.4.0a1, 2.4.0a2, ...)
[tool.semantic_release.branches.feat]
match = "^feat/.*"
prerelease = true
prerelease_token = "a"

# fix/* and bug/*: rc prereleases, patch bump (e.g. 2.3.2rc1, 2.3.2rc2, ...)
# Uses "rc" token (not "a") to avoid version collisions with feat/* branches.
[tool.semantic_release.branches.fix]
match = "^(fix|bug)/.*"
prerelease = true
prerelease_token = "rc"


[tool.setuptools.packages.find]
where = ["."]
include = ["pyagentic*"]


[tool.taskipy.tasks]
compile-diagrams = "for file in docs/diagrams/source/*.d2; do d2 --layout elk \"$file\" \"docs/diagrams/$(basename \"$file\" .d2).svg\"; done"
build-docs  = "task compile-diagrams && mkdocs build --clean"
serve-docs  = "task compile-diagrams && mkdocs serve"
deploy-docs = "task compile-diagrams && mkdocs gh-deploy --force"