[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagentic-core"
dynamic = ["version"]
description = "Build LLM Agents in a Pythonic way"
readme = "README.md"
requires-python = ">=3.13"
authors = [ { name="Ryan Mikulec", email="rmikulec.dev@gmail.com" } ]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "taskipy>=1.14.1",
    "openai>=1.99.3",
    "pydantic>=2.11.7",
    "typeguard>=4.4.4",
    "c3linearize>=0.1.0",
    "anthropic>=0.62.0",
    "google-generativeai>=0.8.0",
    "transitions>=0.9.3",
    "ty>=0.0.15",
    "jinja2>=3.1.6",
    "fastmcp>=3.4.0",
]

[project.scripts]
pyagentic = "pyagentic.cli:app"

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]
deploy = [
    "typer>=0.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.28.0",
    "fastmcp>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.10.2",
    "deepdiff>=8.5.0",
    "flake8>=7.3.0",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "setuptools-scm>=8",
]
demo = [
    "arxiv>=2.2.0",
    "pypdf2>=3.0.1",
    "python-chess>=1.999",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16.1",
]
eval = [
    "deepeval>=3.3.6",
]
ollama = [
    "ollama>=0.5.3",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["pyagentic*"]


[tool.taskipy.tasks]
compile-diagrams = "for file in docs/diagrams/source/*.d2; do d2 --layout elk \"$file\" \"docs/diagrams/$(basename \"$file\" .d2).svg\"; done"
build-docs  = "task compile-diagrams && mkdocs build --clean"
serve-docs  = "task compile-diagrams && mkdocs serve"
deploy-docs = "task compile-diagrams && mkdocs gh-deploy --force"
